--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fun Bus is a travel agency looking for some help on their website.  They want a new navigation, new header, and new buttons on the home page. They also want a mobile version of their site styled.  Use your preprocessing knowledge to accomplish their tasks.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "less-watch-compiler --run-once less css index.less",
+    "build:watch": "less-watch-compiler less css index.less"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/wurde/Preprocessing-II/issues"
   },
-  "homepage": "https://github.com/wurde/Preprocessing-II#readme"
+  "homepage": "https://github.com/wurde/Preprocessing-II#readme",
+  "devDependencies": {
+    "less-watch-compiler": "^1.13.0"
+  }
 }
