--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Fun Bus is a travel agency looking for some help on their website.  They want a new navigation, new header, and new buttons on the home page. They also want a mobile version of their site styled.  Use your preprocessing knowledge to accomplish their tasks.",
   "main": "index.js",
   "scripts": {
+    "start": "live-server",
     "build": "less-watch-compiler --run-once less css index.less",
     "build:watch": "less-watch-compiler less css index.less"
   },
